--- a/BK_RESTORE/App.config
+++ b/BK_RESTORE/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="BK_RESTORE.Properties.Settings.ConnectionString" connectionString="Data Source=DESKTOP-T0NKFJS\LIEMNGUYEN;User ID=sa;Password=12345"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
