make project run properly

--- a/BK_RESTORE/App.config
+++ b/BK_RESTORE/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="BK_RESTORE.Properties.Settings.ConnectionString" connectionString="Data Source=DESKTOP-T0NKFJS\LIEMNGUYEN;User ID=sa;Password=12345"
+        <add name="BK_RESTORE.Properties.Settings.ConnectionString" connectionString="Data Source=DESKTOP-0HM29FR;User ID=sa;Password=123456"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
